fix(css): fix horizontal spacing margin values

--- a/src/stylesheet.css
+++ b/src/stylesheet.css
@@ -9,7 +9,7 @@
   justify-items: center;
   align-items: center;
   /* space horizontally indicators */
-  margin-left: 10px;
+  margin-left: 3px;
   /* simulate presence of border */
   margin-bottom: 2px;
 }
@@ -31,6 +31,9 @@
   font-size: 12px;
   /* center vertically */
   margin-top: 5px;
+  /* space horizontally from icons */
+  margin-right: 2px;
+  margin-left: 2px;
 }
 .wboa-active .wboa-workspace-label { /* active workspace label */
   color: white;
